--- a/templates/header.html
+++ b/templates/header.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <img src="../imgs/image.jpeg" alt="Dalhousie Header Logo" class="header-logo">
+        <img src="./files/banner.jpeg" alt="Dalhousie Header Logo" class="header-logo">
 
         <nav>
             <ul>
