--- a/templates/header.html
+++ b/templates/header.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <img src="./files/banner.jpeg" alt="Dalhousie Header Logo" class="header-logo">
+        <img src="files/banner.jpeg" alt="Dalhousie Header Logo" class="header-logo">
 
         <nav>
             <ul>
@@ -77,6 +77,5 @@
 
         <button class="search-button">Search (for courses)</button>
     </header>
-</body>
-</html>
+
 
