--- a/templates/header.html
+++ b/templates/header.html
@@ -61,6 +61,42 @@
         nav ul li a:hover {
             text-decoration: underline;
         }
+
+        footer {
+            background-color: #FFD73A;
+            padding: 40px 20px;
+            font-family: 'Georgia', serif;
+            color: #111;
+        }
+
+        footer > p {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 40px;
+        }
+
+        .information {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 40px;
+        }
+
+        .information div {
+            flex: 1;
+            min-width: 250px;
+        }
+
+        .information h2 {
+            font-size: 15px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .information p {
+            font-size: 11px;
+            margin: 0;
+        }
     </style>
 </head>
 <body>
@@ -79,6 +115,5 @@
         <button class="search-button" onclick="window.location.href='search'">
             Search (for courses)
         </button>
-</body>
-</html>
+    </header>
 
