--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 40px;
+            padding: 30px 60px;
         }
 
         .header-logo {
@@ -106,9 +106,8 @@
 
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Tutors</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/tutor">Tutors</a></li>
             </ul>
         </nav>
 
