--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,15 @@
-    <footer>
+   <style>
+
+footer {
+    position: relative;
+    width: 100%;
+    margin-top: 120px;
+}
+
+
+   </style>
+   
+   <footer>
         <p>Contact Us</p>
 
         <div class="information">
