updated index, and header to work on homepage

--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 30px 60px;
+            padding: 10px 15px;
         }
 
         .header-logo {
@@ -61,58 +61,22 @@
         nav ul li a:hover {
             text-decoration: underline;
         }
-
-        footer {
-            background-color: #FFD73A;
-            padding: 40px 20px;
-            font-family: 'Georgia', serif;
-            color: #111;
-        }
-
-        footer > p {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 40px;
-        }
-
-        .information {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: 40px;
-        }
-
-        .information div {
-            flex: 1;
-            min-width: 250px;
-        }
-
-        .information h2 {
-            font-size: 15px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .information p {
-            font-size: 11px;
-            margin: 0;
-        }
     </style>
 </head>
 <body>
     <header>
-        <img src="/files/banner.jpeg" alt="Dalhousie Header Logo" class="header-logo">
-
+        <img src="../files/banner.jpeg" alt="Dalhousie Header Logo" class="header-logo">
 
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/tutor">Tutors</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Tutors</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </nav>
 
-        <button class="search-button" onclick="window.location.href='search'">
-            Search (for courses)
-        </button>
+        <button class="search-button">Search (for courses)</button>
     </header>
+</body>
+</html>
 
