Updated header so that the navbar works.

--- a/templates/header.html
+++ b/templates/header.html
@@ -65,17 +65,17 @@
 </head>
 <body>
     <header>
-        <img src="../files/banner.jpeg" alt="Dalhousie Header Logo" class="header-logo">
+        <a href="/"><img src="../files/banner.jpeg" alt="Dalhousie Header Logo" class="header-logo"></a>
 
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Tutors</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/tutor">Tutors</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
 
-        <button class="search-button">Search (for courses)</button>
+        <a href="/search"><button class="search-button">Search (for courses)</button></a>
     </header>
 </body>
 </html>
