--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,40 @@
    <style>
-
-footer {
-    position: relative;
-    width: 100%;
-    margin-top: 120px;
-}
-
-
+         footer {
+             background-color: #FFD73A;
+             padding: 20px 15px;
+             font-family: 'Georgia', serif;
+             color: #111;
+         }
+ 
+         footer > p {
+             font-size: 20px;
+             font-weight: bold;
+             margin-bottom: 40px;
+         }
+ 
+         .information {
+             display: flex;
+             justify-content: space-between;
+             flex-wrap: wrap;
+             gap: 40px;
+         }
+ 
+         .information div {
+             flex: 1;
+             min-width: 250px;
+         }
+ 
+         .information h2 {
+             font-size: 15px;
+             font-weight: bold;
+             margin-bottom: 10px;
+         }
+ 
+         .information p {
+             font-size: 11px;
+             margin: 0;
+         }
+   
    </style>
    
    <footer>
