--- a/templates/header.html
+++ b/templates/header.html
@@ -71,7 +71,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/tutor">Tutors</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/course">Courses</a></li>
             </ul>
         </nav>
 
