Fixed the footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -48,12 +48,12 @@
 
             <div class="email-address">
                 <h2>Email Address</h2>
-                <p>sfs@dal.ca</p>
+                <p>support@daltutoring.com</p>
             </div>
 
             <div class="phone-num">
                 <h2>Phone Number</h2>
-                <p>(123) 456 7890</p>
+                <p>(555) 123-4567</p>
             </div>
         </div>
     </footer>
