--- a/templates/header.html
+++ b/templates/header.html
@@ -62,6 +62,69 @@
         nav ul li a:hover {
             text-decoration: underline;
         }
+
+         /* Media query for Phone */
+    @media (min-width: 320px) and (max-width: 750px){
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #FFD73A;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 5px 8px;
+        }
+
+        .header-logo {
+            height: 40px;
+            object-fit: contain;
+        }
+
+        .search-button {
+            background-color: #111;
+            color: white;
+            padding: 10px 14px;
+            border-radius: 20px;
+            font-size: 8px;
+            border: none;
+            cursor: pointer;
+        }
+
+        nav {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 15px;
+            padding: 0;
+            margin: 0;
+        }
+
+        nav ul li {
+            font-size: 9px;
+            font-weight: bold;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: black;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+
+    }
+
+
     </style>
 </head>
 <body>
